# investment-suggestion-tool

./: .env.example  .gitattributes  .gitignore  README.md  SECURITY.md  alembic.ini  plan.md  pyproject.toml
app/: __init__.py  config.py  logging.py  main.py
docs/: ai-evidence.md  alpha-vantage.md  analysis-synthesis.md  collection.md  decision-policy.md  domain-contracts.md  evidence-scoring.md  gdelt.md  mvp-baseline.md  normalization.md  portfolio.md  proxy-network.md  quality-shadow.md  relevance.md  report-rendering.md  report-triggering.md  scheduler.md  sec.md  source-registry.md  source-strategy.md  storage.md  taxonomy.md  web-ui.md
migrations/: env.py
schemas/: domain-contracts-v1.json
scripts/: bootstrap.ps1  check.ps1  check_deepseek_connection.py  check_secrets.py  configure_alpha_vantage_source.py  configure_official_sources.py  export_schemas.py  inspect_runtime_state.py  install-windows-scheduler.ps1  process_market_snapshots.py  process_pending_once.py  run-dev.ps1  run_alpha_vantage_once.py  run_analysis_once.py  run_evidence_once.py  run_gdelt_once.py  run_normalization_once.py  run_official_sources_once.py  run_relevance_once.py  run_report_tasks_once.py  run_reports_once.py  run_scheduler_once.py  run_scoring_once.py  run_sec_once.py  run_shadow_once.py  run_synthesis_once.py  seed_demo_portfolio.py  seed_demo_taxonomy.py  seed_gdelt_source.py  seed_sec_source.py  storage_admin.py
tests/: domain_factories.py  taxonomy_factories.py  test_ai_evidence.py  test_alpha_vantage_adapter.py  test_analysis_synthesis.py  test_config.py  test_health.py  (+33 more)
(+107 files in other folders)
