[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "investment-suggestion-tool"
version = "0.1.0"
description = "Evidence-based, advisory-only ETF analysis tool for personal use"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.18.5,<2.0",
  "cryptography>=46,<51",
  "fastapi>=0.115,<1.0",
  "httpx>=0.28,<1.0",
  "pydantic-settings>=2.7,<3.0",
  "pypdf>=6.14.2,<7.0",
  "sqlalchemy>=2.0.51,<2.1",
  "uvicorn[standard]>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
  "pip-audit>=2.7,<3.0",
  "pytest>=9.0.3,<10.0",
  "pytest-cov>=6.0,<7.0",
  "ruff>=0.9,<1.0",
]
postgres = [
  "psycopg[binary]>=3.2,<4.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
"app.web" = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --strict-config -p no:cacheprovider"

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 85

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "S", "SIM", "UP"]
ignore = ["S101"]
